sidebar not clicking on mobile view fix

--- a/src/components/market/market.module.css
+++ b/src/components/market/market.module.css
@@ -62,6 +62,7 @@
     flex-direction: column;
     align-items: center;
     height: 90%;
+    background-color: red;
   }
   .internal{
     height: 50%;
